--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,7 +24,7 @@
                             <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="20"/>
                         </collectionViewFlowLayout>
                         <activityIndicatorView key="backgroundView" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" id="Zhf-VO-Zgz">
-                            <rect key="frame" x="0.0" y="-70" width="320" height="568"/>
+                            <rect key="frame" x="0.0" y="-64" width="320" height="568"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </activityIndicatorView>
                         <cells>
@@ -175,7 +176,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7kL-ud-9fT" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="c40-n1-mcv">
-                        <rect key="frame" x="0.0" y="20" width="320" height="98.5"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="92.5"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -219,7 +220,14 @@
                             <outlet property="delegate" destination="tFm-P9-EMU" id="mVA-pu-5dV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="5vT-vV-vZF"/>
+                    <navigationItem key="navigationItem" id="5vT-vV-vZF">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2kb-Sp-1jj">
+                            <connections>
+                                <action selector="addReviewTapped:" destination="tFm-P9-EMU" id="Zlk-QO-b8e"/>
+                                <segue destination="SyT-nq-O5B" kind="presentation" id="K7X-Ta-dCh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IPG-B0-eeQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -301,11 +309,79 @@
             </objects>
             <point key="canvasLocation" x="4903" y="-8"/>
         </scene>
+        <!--New review-->
+        <scene sceneID="jqS-7B-kTR">
+            <objects>
+                <viewController id="CZk-7h-uta" customClass="NewReviewViewController" customModule="Lessons_3_02_04_Networking" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I4M-Ls-27T">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Si vis pacem para belum." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="poP-Ac-cPt">
+                                <rect key="frame" x="16" y="76" width="288" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bac-74-0bd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="top" secondItem="bac-74-0bd" secondAttribute="top" constant="20" id="ZoU-EV-dDS"/>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="centerX" secondItem="I4M-Ls-27T" secondAttribute="centerX" id="bpE-tJ-MOg"/>
+                            <constraint firstItem="bac-74-0bd" firstAttribute="trailing" secondItem="poP-Ac-cPt" secondAttribute="trailing" constant="16" id="dej-1W-dV2"/>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="leading" secondItem="bac-74-0bd" secondAttribute="leading" constant="16" id="o9K-rp-16R"/>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="height" secondItem="I4M-Ls-27T" secondAttribute="height" multiplier="0.233577" id="rvd-XP-0mT"/>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="width" secondItem="I4M-Ls-27T" secondAttribute="height" multiplier="72:137" id="x8T-dY-OBi"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New review" id="CNd-wy-l13">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="hlf-h3-YV8">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="CZk-7h-uta" id="rLE-EB-Pwl"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="37e-AF-2S1">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="CZk-7h-uta" id="TyB-Gx-Olb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="newReviewTextView" destination="poP-Ac-cPt" id="DuN-qr-Gv9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="roP-PE-58c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7378" y="-8"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Xhm-8A-lnm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SyT-nq-O5B" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="MEc-8L-vLH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="104.5"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="CZk-7h-uta" kind="relationship" relationship="rootViewController" id="wMQ-f5-WEb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eKz-JU-wa1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6589" y="-8"/>
+        </scene>
     </scenes>
     <resources>
         <image name="doc.on.doc.fill" catalog="system" width="116" height="128"/>
         <image name="doc.text.fill" catalog="system" width="115" height="128"/>
         <image name="list.bullet.clipboard.fill" catalog="system" width="103" height="128"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
