--- a/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
+++ b/Lessons-3.02-04_Networking/Storyboards/Base.lproj/Main.storyboard
@@ -221,9 +221,8 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="5vT-vV-vZF">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2kb-Sp-1jj">
+                        <barButtonItem key="rightBarButtonItem" title="Add Review" id="2kb-Sp-1jj">
                             <connections>
-                                <action selector="addReviewTapped:" destination="tFm-P9-EMU" id="Zlk-QO-b8e"/>
                                 <segue destination="SyT-nq-O5B" kind="presentation" id="K7X-Ta-dCh"/>
                             </connections>
                         </barButtonItem>
@@ -312,17 +311,17 @@
         <!--New review-->
         <scene sceneID="jqS-7B-kTR">
             <objects>
-                <viewController id="CZk-7h-uta" customClass="NewReviewViewController" customModule="Lessons_3_02_04_Networking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NewReviewVC" id="CZk-7h-uta" customClass="NewReviewViewController" customModule="Lessons_3_02_04_Networking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="I4M-Ls-27T">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Si vis pacem para belum." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="poP-Ac-cPt">
-                                <rect key="frame" x="16" y="76" width="288" height="128"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Si vis pacem para belum." textAlignment="natural" layoutManager="textKit1" translatesAutoresizingMaskIntoConstraints="NO" id="poP-Ac-cPt">
+                                <rect key="frame" x="16" y="76" width="288" height="452"/>
+                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bac-74-0bd"/>
@@ -332,8 +331,7 @@
                             <constraint firstItem="poP-Ac-cPt" firstAttribute="centerX" secondItem="I4M-Ls-27T" secondAttribute="centerX" id="bpE-tJ-MOg"/>
                             <constraint firstItem="bac-74-0bd" firstAttribute="trailing" secondItem="poP-Ac-cPt" secondAttribute="trailing" constant="16" id="dej-1W-dV2"/>
                             <constraint firstItem="poP-Ac-cPt" firstAttribute="leading" secondItem="bac-74-0bd" secondAttribute="leading" constant="16" id="o9K-rp-16R"/>
-                            <constraint firstItem="poP-Ac-cPt" firstAttribute="height" secondItem="I4M-Ls-27T" secondAttribute="height" multiplier="0.233577" id="rvd-XP-0mT"/>
-                            <constraint firstItem="poP-Ac-cPt" firstAttribute="width" secondItem="I4M-Ls-27T" secondAttribute="height" multiplier="72:137" id="x8T-dY-OBi"/>
+                            <constraint firstItem="poP-Ac-cPt" firstAttribute="height" secondItem="I4M-Ls-27T" secondAttribute="height" multiplier="0.233577" constant="324" id="rvd-XP-0mT"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="New review" id="CNd-wy-l13">
@@ -354,12 +352,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="roP-PE-58c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7378" y="-8"/>
+            <point key="canvasLocation" x="7376.25" y="-8.4507042253521121"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Xhm-8A-lnm">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SyT-nq-O5B" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="NewReviewNavVC" automaticallyAdjustsScrollViewInsets="NO" id="SyT-nq-O5B" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="MEc-8L-vLH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="104.5"/>
@@ -381,6 +379,9 @@
         <image name="list.bullet.clipboard.fill" catalog="system" width="103" height="128"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
